--- a/MP-MMS.WPF/Views/Pages/PartsPage.xaml
+++ b/MP-MMS.WPF/Views/Pages/PartsPage.xaml
@@ -109,8 +109,8 @@
                         <GridViewColumn Header="Model Number" DisplayMemberBinding="{Binding ModelNumber}" Width="100"/>
                         <GridViewColumn Header="Category" DisplayMemberBinding="{Binding Category}" Width="100"/>
                         <GridViewColumn x:Name="LocationNameColumn" Header="Location" DisplayMemberBinding="{Binding Location}" Width="100"/>
-                        <GridViewColumn Header="Cost per Unit (₦)" DisplayMemberBinding="{Binding UnitCost}" Width="100"/>
-                        <GridViewColumn Header="Quantity" DisplayMemberBinding="{Binding Quantity}" Width="100"/>
+                        <GridViewColumn Header="Cost per Unit (₦)" DisplayMemberBinding="{Binding UnitCost}" Width="Auto"/>
+                        <GridViewColumn Header="Quantity" DisplayMemberBinding="{Binding Quantity}" Width="Auto"/>
                         <GridViewColumn Header="Date Added" DisplayMemberBinding="{Binding DateAdded, StringFormat='{}{0:dd/MM/yyyy}'}" Width="100"/>
                         <GridViewColumn Header="Actions" Width="Auto">
                             <GridViewColumn.CellTemplate>
