Change position of Update and Delete btn for the Users page.

--- a/MP-MMS.WPF/Views/Pages/LocationsPage.xaml
+++ b/MP-MMS.WPF/Views/Pages/LocationsPage.xaml
@@ -44,22 +44,22 @@
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="Auto"/>
             </Grid.ColumnDefinitions>
             <Syncfusion:SfTextBoxExt Watermark="Search" 
                                      Height="30"
                                      Grid.Column="0"
+                                     Margin="0 0 5 0"
                                      FontSize="16"
                                      VerticalAlignment="Center"
                                      x:Name="txtSearch"
                                      TextChanged="SearchBox_TextChanged"/>
 
-
-
-            <Button Grid.Column="2"
+            <Button Grid.Column="1"
                     Background="#3D8421"
                     Width="205"
                     BorderThickness="0"
-                    Margin="10 0 0 0"
+                    Margin="5 0"
                     Click="AddLocation_Click">
                 <Grid>
                     <Grid.ColumnDefinitions>
@@ -76,40 +76,34 @@
                                Foreground="White"/>
                 </Grid>
             </Button>
+
+
+            <Button Grid.Column="2"
+                    Width="30"
+                    Margin="5 0"
+                    BorderThickness="0"
+                    Background="#568CD9"
+                    Click="UpdateLocation_Click">
+                <Image  Source="/Images/pagesicons/edit.png"
+                                                    Style="{StaticResource ButtonIconsStyle}"/>
+            </Button>
+            <Button Grid.Column="3"
+                    Width="30"
+                    Margin="5 0 0 0"
+                    BorderThickness="0"
+                    Background="#F44336"
+                    Click="DeleteLocation_Click">
+                <Image  Source="/Images/pagesicons/delete.png"
+                                                    Style="{StaticResource ButtonIconsStyle}"/>
+            </Button>
         </Grid>
 
         <ListView x:Name="locationsListView" Grid.Row="2">
             <ListView.View>
                 <GridView>
                     <GridView.Columns>
-                        <GridViewColumn Header="Name" DisplayMemberBinding="{Binding Name}" Width="200"/>
+                        <GridViewColumn Header="Name" DisplayMemberBinding="{Binding Name}" Width="300"/>
                         <GridViewColumn Header="Address" DisplayMemberBinding="{Binding Address}" Width="600"/>
-                        <GridViewColumn Header="Actions" Width="Auto">
-                            <GridViewColumn.CellTemplate>
-                                <DataTemplate>
-                                    <StackPanel Orientation="Horizontal">
-                                        <Button Grid.Column="1"
-                                                Width="30"
-                                                Margin="5 0"
-                                                BorderThickness="0"
-                                                Background="#568CD9"
-                                                Click="UpdateLocation_Click">
-                                            <Image  Source="/Images/pagesicons/edit.png"
-                                                    Style="{StaticResource ButtonIconsStyle}"/>
-                                        </Button>
-                                        <Button Grid.Column="1"
-                                                Width="30"
-                                                Margin="5 0"
-                                                BorderThickness="0"
-                                                Background="#F44336"
-                                                Click="DeleteLocation_Click">
-                                            <Image  Source="/Images/pagesicons/delete.png"
-                                                    Style="{StaticResource ButtonIconsStyle}"/>
-                                        </Button>
-                                    </StackPanel>
-                                </DataTemplate>
-                            </GridViewColumn.CellTemplate>
-                        </GridViewColumn>
                     </GridView.Columns>
                 </GridView>
             </ListView.View>
