--- a/MP-MMS.WPF/Views/Pages/HomeDashboard.xaml
+++ b/MP-MMS.WPF/Views/Pages/HomeDashboard.xaml
@@ -1,92 +1,75 @@
-﻿<Page x:Class="MP_MMS.WPF.Views.Pages.HomeDashboard"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-      xmlns:local="clr-namespace:MP_MMS.WPF.Views.Pages" xmlns:chart="clr-namespace:Syncfusion.UI.Xaml.Charts;assembly=Syncfusion.SfChart.WPF"
-      mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
-      Title="HomeDashboard">
+﻿<Page
+    x:Class="MP_MMS.WPF.Views.Pages.HomeDashboard"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:chart="clr-namespace:Syncfusion.UI.Xaml.Charts;assembly=Syncfusion.SfChart.WPF"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:MP_MMS.WPF.Views.Pages"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Title="HomeDashboard"
+    d:DesignHeight="450"
+    d:DesignWidth="800"
+    mc:Ignorable="d">
 
     <Grid>
-        <!--<Grid.RowDefinitions>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-        </Grid.RowDefinitions>-->
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
 
-        <!--Upper Controls Section-->
+        <!--  Chart  -->
+        <Border
+            Grid.Row="0"
+            Margin="30,0"
+            Background="White"
+            BorderBrush="{StaticResource BrushPrimaryColour2}"
+            BorderThickness="2"
+            CornerRadius="10">
+            <chart:SfChart x:Name="PieChartDisplay" Margin="10" />
+        </Border>
 
-        <!--<Grid Grid.Row="0">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="400"/>
-            </Grid.ColumnDefinitions>-->
-
-            <!--Chart-->
-        <Border CornerRadius="10" Background="White" Grid.Row="0" Margin="30 0" BorderBrush="{StaticResource BrushPrimaryColour2}" BorderThickness="2">
-                <chart:SfChart x:Name="PieChartDisplay" Margin="10" >
-                </chart:SfChart>
-            </Border>
-
-            <!--Events Region--><!--
-            <StackPanel Grid.Column="1" Margin="30">
-                <TextBlock Text="Events" Foreground="{StaticResource BrushPrimaryColour2}" FontWeight="Bold" FontSize="15"/>
-            </StackPanel>
-
-        </Grid>-->
-
-        <!--Lower Controls Section--><!--
+        <!--  Lower Controls Section  -->
         <Grid Grid.Row="1">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="*"/>
+            <Grid.ColumnDefinitions> 
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
 
-            <Button Grid.Column="0"
-                    Background="{StaticResource BrushPrimaryColour1}"
-                    Margin="30">
-                <StackPanel VerticalAlignment="Center"
-                        HorizontalAlignment="Center">
-                    <TextBlock Text="0"
-                           Foreground="White"
-                           FontSize="80"
-                           HorizontalAlignment="Center"/>
-                    <TextBlock Text="Machine Parts"
-                           Foreground="White"
-                           HorizontalAlignment="Center"/>
-                </StackPanel>
-            </Button>
-            <Button Grid.Column="1"
-                    Background="{StaticResource BrushPrimaryColour1}"
-                    Margin="30"
-                    x:Name="openIssues">
-                <StackPanel VerticalAlignment="Center"
-                        HorizontalAlignment="Center">
-                    <TextBlock Text="0"
-                           Foreground="White"
-                           FontSize="80"
-                           HorizontalAlignment="Center"/>
-                    <TextBlock Text="Open Issues"
-                           Foreground="White"
-                           HorizontalAlignment="Center"/>
+            <Button
+                Grid.Column="0"
+                Margin="30"
+                Background="{StaticResource BrushPrimaryColour1}">
+                <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
+                    <TextBlock
+                        x:Name="TbMachineParts"
+                        HorizontalAlignment="Center"
+                        FontSize="80"
+                        Foreground="White"
+                        Text="0" />
+                    <TextBlock
+                        HorizontalAlignment="Center"
+                        Foreground="White"
+                        Text="Machine Parts" />
                 </StackPanel>
             </Button>
 
-            <Button Grid.Column="2"
-                    Background="{StaticResource BrushPrimaryColour1}"
-                    Margin="30">
-                <StackPanel VerticalAlignment="Center"
-                        HorizontalAlignment="Center">
-                    <TextBlock Text="0"
-                           Foreground="White"
-                           FontSize="80"
-                           HorizontalAlignment="Center"/>
-                    <TextBlock Text="Users"
-                           Foreground="White"
-                           HorizontalAlignment="Center"/>
+            <Button
+                Grid.Column="1"
+                Margin="30"
+                Background="{StaticResource BrushPrimaryColour1}">
+                <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
+                    <TextBlock
+                        x:Name="TbEmployees"
+                        HorizontalAlignment="Center"
+                        FontSize="80"
+                        Foreground="White"
+                        Text="0" />
+                    <TextBlock
+                        HorizontalAlignment="Center"
+                        Foreground="White"
+                        Text="Users" />
                 </StackPanel>
             </Button>
-        </Grid>-->
+        </Grid>
     </Grid>
 </Page>
