--- a/MP-MMS.WPF/App.xaml
+++ b/MP-MMS.WPF/App.xaml
@@ -1,12 +1,13 @@
-﻿<Application x:Class="MP_MMS.WPF.App"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:MP_MMS.WPF"
-             StartupUri="/Views/LoginWindow.xaml">
+﻿<Application
+    x:Class="MP_MMS.WPF.App"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:local="clr-namespace:MP_MMS.WPF"
+    StartupUri="/Views/LoginWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
-        <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="/Resources/UIResources.xaml"/>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="/Resources/UIResources.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
