--- a/MP-MMS.WPF/Views/Windows/AddPart.xaml
+++ b/MP-MMS.WPF/Views/Windows/AddPart.xaml
@@ -1,95 +1,107 @@
-﻿<Window xmlns:Syncfusion="http://schemas.syncfusion.com/wpf"  x:Class="MP_MMS.WPF.Views.Windows.AddPart"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:MP_MMS.WPF.Views.Windows"
-        mc:Ignorable="d"
-        Title="Add New Part" Height="380" Width="500"
-        ResizeMode="NoResize">
+﻿<Window
+    x:Class="MP_MMS.WPF.Views.Windows.AddPart"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:Syncfusion="http://schemas.syncfusion.com/wpf"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:MP_MMS.WPF.Views.Windows"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Title="Add New Part"
+    Width="500"
+    Height="380"
+    ResizeMode="NoResize"
+    mc:Ignorable="d">
     <Grid Margin="10">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="150"/>
-            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="150" />
+            <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
 
         <StackPanel Grid.Column="0">
-            <Label Content="Add Part"
-               FontSize="30"
-               FontWeight="Bold"
-               FontFamily="{StaticResource DefaultFont}"/>
-            <TextBlock Text="Write a name and other details of new machine part"
-                       TextWrapping="Wrap"/>
+            <Label
+                Content="Add Part"
+                FontFamily="{StaticResource DefaultFont}"
+                FontSize="30"
+                FontWeight="Bold" />
+            <TextBlock Text="Write a name and other details of new machine part" TextWrapping="Wrap" Margin="0 0 0 20"/>
+
+            <Image x:Name="ImgPart" Source="/images/image-gallery.png" Width="100" Height="100"/>
+            <StackPanel
+                HorizontalAlignment="Center"
+                Orientation="Horizontal" Margin="0">
+                <TextBlock x:Name="TbImgName" Text="Add Part Image" TextWrapping="Wrap" FontSize="10" Margin="0 10"/>
+                <Button Content ="Browse..." FontSize="10" Margin="10"/>
+            </StackPanel>
         </StackPanel>
 
-        <StackPanel Grid.Column="1" >
-            <Label Content="Name"/>
-            <Syncfusion:SfTextBoxExt Watermark="Welding rod"
-                                     Margin="5 0"
-                                     x:Name="txtName"/>
-            <Label Content="Manufacturer"/>
-            <Syncfusion:SfTextBoxExt Watermark="Polyteric Systems"
-                                     Margin="5 0"
-                                     x:Name="txtManufacturer"/>
-            <Label Content="Serial Number"/>
-            <Syncfusion:SfTextBoxExt Watermark="00-00-123"
-                                     Margin="5 0"
-                                     x:Name="txtSerialNumber"/>
-            <Label Content="Model Number"/>
-            <Syncfusion:SfTextBoxExt Watermark="00-00-ABC"
-                                     Margin="5 0"
-                                     x:Name="txtModelNumber"/>
+        <StackPanel Grid.Column="1">
+            <Label Content="Name" />
+            <Syncfusion:SfTextBoxExt
+                x:Name="txtName"
+                Margin="5,0"
+                Watermark="Welding rod" />
+            <Label Content="Manufacturer" />
+            <Syncfusion:SfTextBoxExt
+                x:Name="txtManufacturer"
+                Margin="5,0"
+                Watermark="Polyteric Systems" />
+            <Label Content="Serial Number" />
+            <Syncfusion:SfTextBoxExt
+                x:Name="txtSerialNumber"
+                Margin="5,0"
+                Watermark="00-00-123" />
+            <Label Content="Model Number" />
+            <Syncfusion:SfTextBoxExt
+                x:Name="txtModelNumber"
+                Margin="5,0"
+                Watermark="00-00-ABC" />
             <Grid>
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
                 </Grid.ColumnDefinitions>
 
-                <StackPanel Grid.Column="0"
-                             Margin="5 0">
-                    <Label Content="Category"/>
-                    <Syncfusion:ComboBoxAdv x:Name="cBoxCategory"/>
+                <StackPanel Grid.Column="0" Margin="5,0">
+                    <Label Content="Category" />
+                    <Syncfusion:ComboBoxAdv x:Name="cBoxCategory" />
                 </StackPanel>
 
-                <StackPanel Grid.Column="1" 
-                            Margin="5 0">
-                    <Label Content="Location "/>
-                    <Syncfusion:ComboBoxAdv x:Name="cBoxLocation"/>
+                <StackPanel Grid.Column="1" Margin="5,0">
+                    <Label Content="Location " />
+                    <Syncfusion:ComboBoxAdv x:Name="cBoxLocation" />
                 </StackPanel>
             </Grid>
 
             <Grid>
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
                 </Grid.ColumnDefinitions>
 
-                <StackPanel Grid.Column="0"
-                             Margin="5 0">
-                    <Label Content="Unit Cost (₦)"/>
-                    <Syncfusion:IntegerTextBox x:Name="txtCostPerUnit"/>
+                <StackPanel Grid.Column="0" Margin="5,0">
+                    <Label Content="Unit Cost (₦)" />
+                    <Syncfusion:IntegerTextBox x:Name="txtCostPerUnit" />
                 </StackPanel>
 
-                <StackPanel Grid.Column="1" 
-                            Margin="5 0">
-                    <Label Content="Quantity "/>
-                    <Syncfusion:IntegerTextBox x:Name="txtQuantity"/>
+                <StackPanel Grid.Column="1" Margin="5,0">
+                    <Label Content="Quantity " />
+                    <Syncfusion:IntegerTextBox x:Name="txtQuantity" />
                 </StackPanel>
 
-                <StackPanel Grid.Column="2" 
-                            Margin="5 0">
-                    <Label Content="Date Added"/>
-                    <Syncfusion:SfDatePicker x:Name="txtDateAdded"/>
+                <StackPanel Grid.Column="2" Margin="5,0">
+                    <Label Content="Date Added" />
+                    <Syncfusion:SfDatePicker x:Name="txtDateAdded" />
                 </StackPanel>
             </Grid>
 
-            <Syncfusion:ButtonAdv Margin="5 10"
-                                  Label="Add Part"
-                                  Foreground="White"
-                                  Background="#3D8421"
-                                  SmallIcon="/Images/pagesicons/add.png"
-                                  Click="AddPart_Click"/>
+            <Syncfusion:ButtonAdv
+                Margin="5,10"
+                Background="#3D8421"
+                Click="AddPart_Click"
+                Foreground="White"
+                Label="Add Part"
+                SmallIcon="/Images/pagesicons/add.png" />
 
         </StackPanel>
     </Grid>
