--- a/MP-MMS.WPF/Views/Windows/AddPart.xaml
+++ b/MP-MMS.WPF/Views/Windows/AddPart.xaml
@@ -26,12 +26,8 @@
             <TextBlock Text="Write a name and other details of new machine part" TextWrapping="Wrap" Margin="0 0 0 20"/>
 
             <Image x:Name="ImgPart" Source="/images/image-gallery.png" Width="100" Height="100"/>
-            <StackPanel
-                HorizontalAlignment="Center"
-                Orientation="Horizontal" Margin="0">
-                <TextBlock x:Name="TbImgName" Text="Add Part Image" TextWrapping="Wrap" FontSize="10" Margin="0 10"/>
-                <Button Content ="Browse..." FontSize="10" Margin="10"/>
-            </StackPanel>
+            <TextBlock x:Name="TbImgName" HorizontalAlignment="Center" Text="Add Part Image" TextWrapping="Wrap" FontSize="10"/>
+            <Button Content ="Browse..." x:Name="FileDialogBtn" FontSize="10" Margin="10" Click="FileDialogBtn_Click"/>
         </StackPanel>
 
         <StackPanel Grid.Column="1">
